modifing the visual of the UI

--- a/captive-portal/html/fail.html
+++ b/captive-portal/html/fail.html
@@ -7,12 +7,26 @@
     <link rel="stylesheet" href="styleFail.css">
 </head>
 <body>
-    <h1>Lock&Route</h1>
-    
-    <div class="message-container">
-        <div class="error-message">Request Denied</div>
-        <p>Invalid username or password. Please try again.</p>
-        <a href="/login" class="retry-btn">Try Again</a>
+    <div class="floating-shapes">
+        <div class="shape shape1"></div>
+        <div class="shape shape2"></div>
+        <div class="shape shape3"></div>
+        <div class="line line1"></div>
+        <div class="line line2"></div>
+        <div class="dot dot1"></div>
+        <div class="dot dot2"></div>
+        <div class="dot dot3"></div>
+    </div>
+
+    <div class="content">
+        <h1>Lock&Route</h1>
+        
+        <div class="message-container">
+            <div class="error-icon"></div>
+            <div class="error-message">Request Denied</div>
+            <p>Invalid username or password. Please try again.</p>
+            <a href="/login" class="retry-btn">Try Again</a>
+        </div>
     </div>
 </body>
 </html>
